# hg-ws

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  index.html  index.js
.github/workflows/: build-golang-docker-image.yml  build-hug-image.yml  docker.yml  rust-ci.yml
src/: app.rs  bootstrap.rs  dependencies.rs  dns.rs  external.rs  facade.rs  lib.rs  main.rs  monitor.rs  policy.rs  runtime.rs  subscription.rs
src/application/: config.rs  ports.rs
src/domain/: mod.rs  protocol.rs  subscription.rs
src/infrastructure/: dns.rs  external.rs  mod.rs  monitor.rs  runtime.rs
tests/: config_subscription_tests.rs  dns_cache_tests.rs  policy_tests.rs  protocol_tests.rs
