[package]
name = "rws"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
futures-util = "0.3"
http = "1"
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
snafu = "0.8"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = "0.5"
